Correctif pour le changement du dossier après l'execution du script init

--- a/generators/app/templates/init/init.d/drupal.sh.hbs
+++ b/generators/app/templates/init/init.d/drupal.sh.hbs
@@ -40,6 +40,4 @@ mkdir -p ../web/sites/default/files/tmp
 echo "Init Drupal: create settings link"
 cd ../web/sites/default
 mv settings.php settings.$DOCKER_DEVBOX_ENV.php
-ln -s settings.$DOCKER_DEVBOX_ENV.php settings.php
-
-cd "$(dirname "$0")/.."
+ln -fs settings.$DOCKER_DEVBOX_ENV.php settings.php
