--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -15,43 +15,56 @@ if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
   # Define DOCKER_DEVBOX_ENV to customize environment configuration files
   autostash DOCKER_DEVBOX_ENV="${DOCKER_DEVBOX_ENV:-dev}"
 
-  if [ -f "docker-compose.override.$DOCKER_DEVBOX_ENV.yml" ]; then
-    ln -fs "docker-compose.override.$DOCKER_DEVBOX_ENV.yml" "docker-compose.override.yml"
-  fi
-  {{#if mapserverContainer}}
-  if [ -f "mapserver/mapserver.$DOCKER_DEVBOX_ENV.map" ]; then
-    ln -fs "mapserver/mapserver.$DOCKER_DEVBOX_ENV.yml" "mapserver/mapserver.map"
-  fi
-  {{/if}}
-  {{#if drupalInit}}
-  if [ -f "web/sites/default/settings.$DOCKER_DEVBOX_ENV.php" ]; then
-    ln -fs "web/sites/default/settings.$DOCKER_DEVBOX_ENV.php" "web/sites/default/settings.php"
-  fi
-  {{/if}}
+  ln -rfs "docker-compose.override.$DOCKER_DEVBOX_ENV.yml" "docker-compose.override.yml"
+{{#if mapserverContainer}}
+  ln -rfs "mapserver/mapserver.$DOCKER_DEVBOX_ENV.yml" "mapserver/mapserver.map"
+{{/if}}
+{{#if drupalInit}}
+  ln -rfs "web/sites/default/settings.$DOCKER_DEVBOX_ENV.php" "web/sites/default/settings.php"
+{{/if}}
 fi
 
-autostash alias dc="docker-compose"
-autostash alias run="docker-compose run --rm"
+_docker_devbox_map_workdir() {
+  CONTAINER_PROJECT_DIR="$1"
+
+  RELATIVE_PATH="${PWD/$COMPOSE_PROJECT_DIR/}"
+  CONTAINER_PWD="$CONTAINER_PROJECT_DIR$RELATIVE_PATH"
+  echo $CONTAINER_PWD
+}
+
+# Commands aliases are automatically generated from functions following this pattern
+# _alias_[ALIAS]() { [COMMAND] $@;}
+
+_alias_dc() { docker-compose $@;}
+_alias_run() { docker-compose run --rm $@;}
 
 {{#if_eq webImage "php" ~}}
-autostash alias php="docker-compose run --rm --user www-data --entrypoint php web"
-autostash alias composer="docker-compose run --rm --user www-data --entrypoint composer web"
-autostash alias drush="docker-compose run --rm --user www-data --entrypoint php --workdir=/var/www/html/web web ../vendor/drush/drush/drush"
-autostash alias drupal="docker-compose run --rm --user www-data --entrypoint php --workdir=/var/www/html/web web ../vendor/drupal/console/bin/drupal"
+_alias_php() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
+_alias_composer() { docker-compose run --rm --user www-data --entrypoint composer --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
+_alias_drush() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web ../vendor/drush/drush/drush $@;}
+_alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web ../vendor/drupal/console/bin/drupal $@;}
 {{/if_eq ~}}
 {{#if_eq dbImage "postgres" ~}}
-autostash alias psql="docker-compose exec --user www-data db psql -U {{projectName}}"
+_alias_psql() { docker-compose exec --user www-data --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -U {{projectName}} $@;}
 {{/if_eq ~}}
 {{#if_eq dbImage "mysql" ~}}
-autostash alias mysql="docker-compose exec --user root db mysql -U root"
+_alias_mysql() { docker-compose exec --user root db mysql -U root $@;}
 {{/if_eq ~}}
 {{#if phingContainer ~}}
-autostash alias phing="docker-compose run --rm --user www-data --entrypoint php --workdir=/app/.phing builder /composer/vendor/phing/phing/bin/phing"
-{{/if}}
+_alias_phing() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/app")" builder /composer/vendor/phing/phing/bin/phing  $@;}
+{{/if ~}}
 {{#if nodeSassContainer ~}}
-autostash alias node-sass="docker-compose run --rm node-sass"
-autostash alias watch-sass="docker-compose run --rm --entrypoint chokidar node-sass \"./**/*.scss\" --initial --verbose -p -c \"node-sass scss -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true\""
-{{/if}}
+_alias_node-sass() { docker-compose run --rm node-sass $@;}
+_alias_watch-sass() { docker-compose run --rm --entrypoint chokidar node-sass \"./**/*.scss\" --initial --verbose -p -c \"node-sass . -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true\" $@;}
+{{/if ~}}
+
+
+ALIAS_FUNCTIONS=$(declare -F | sed -r 's/^declare -f //' | awk -F= '/^_?alias_/{print $1 }')
+echo "Supported command aliases: "
+for func in $ALIAS_FUNCTIONS; do
+  autostash alias $(sed -r 's/^_?alias_//' <<< "$func")="$func"
+  echo " - $(sed -r 's/^_?alias_//' <<< "$func")"
+done
 
 {{#if init ~}}
 if [ -f "./init/init.sh" ] && [ ! -f ./init/.initialized ] && [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
@@ -65,4 +78,4 @@ if [ -f "./init/init.sh" ] && [ ! -f ./init/.initialized ] && [ -z "$BASH_ENTER_
       echo "Initialization skipped"
   fi
 fi
-{{/if}}
+{{/if ~}}
