--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -19,9 +19,6 @@ if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
 {{#if mapserverContainer}}
   ln -rfs "mapserver/mapserver.$DOCKER_DEVBOX_ENV.yml" "mapserver/mapserver.map"
 {{/if}}
-{{#if drupalInit}}
-  ln -rfs "web/sites/default/settings.$DOCKER_DEVBOX_ENV.php" "web/sites/default/settings.php"
-{{/if}}
 fi
 
 _docker_devbox_map_workdir() {
@@ -41,29 +38,30 @@ _alias_run() { docker-compose run --rm $@;}
 {{#if_eq webImage "php" ~}}
 _alias_php() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
 _alias_composer() { docker-compose run --rm --user www-data --entrypoint composer --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
-_alias_drush() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web ../vendor/drush/drush/drush $@;}
-_alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web ../vendor/drupal/console/bin/drupal $@;}
-{{/if_eq ~}}
+{{#if drupalInit ~}}
+_alias_drush() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web /var/www/html/vendor/drush/drush/drush $@;}
+_alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web /var/www/html/vendor/drupal/console/bin/drupal $@;}
+{{/if}}
+{{/if_eq}}
 {{#if_eq dbImage "postgres" ~}}
 _alias_psql() { docker-compose exec --user www-data --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -U {{projectName}} $@;}
-{{/if_eq ~}}
+{{/if_eq}}
 {{#if_eq dbImage "mysql" ~}}
 _alias_mysql() { docker-compose exec --user root db mysql -U root $@;}
-{{/if_eq ~}}
+{{/if_eq}}
 {{#if phingContainer ~}}
 _alias_phing() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/app")" builder /composer/vendor/phing/phing/bin/phing  $@;}
-{{/if ~}}
+{{/if}}
 {{#if nodeSassContainer ~}}
 _alias_node-sass() { docker-compose run --rm node-sass $@;}
 _alias_watch-sass() { docker-compose run --rm --entrypoint chokidar node-sass \"./**/*.scss\" --initial --verbose -p -c \"node-sass . -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true\" $@;}
-{{/if ~}}
-
+{{/if}}
 
 ALIAS_FUNCTIONS=$(declare -F | sed -r 's/^declare -f //' | awk -F= '/^_?alias_/{print $1 }')
-echo "Supported command aliases: "
+if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then echo "Commands: "; fi
 for func in $ALIAS_FUNCTIONS; do
   autostash alias $(sed -r 's/^_?alias_//' <<< "$func")="$func"
-  echo " - $(sed -r 's/^_?alias_//' <<< "$func")"
+  if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then echo " - $(sed -r 's/^_?alias_//' <<< "$func")"; fi
 done
 
 {{#if init ~}}
@@ -74,8 +72,19 @@ if [ -f "./init/init.sh" ] && [ ! -f ./init/.initialized ] && [ -z "$BASH_ENTER_
   then
       echo "Running initialization script: ./init/init.sh"
       ./init/init.sh
+      if [ $? -eq 0 ]; then
+        echo "Initialization succeded"
+      else
+        echo "Initialization failed"
+      fi
   else
       echo "Initialization skipped"
   fi
 fi
-{{/if ~}}
+{{/if}}
+
+{{#if drupalInit}}
+if [ -f "web/sites/default/settings.$DOCKER_DEVBOX_ENV.php" ]; then
+  ln -rfs "web/sites/default/settings.$DOCKER_DEVBOX_ENV.php" "web/sites/default/settings.php"
+fi
+{{/if}}
