--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -17,7 +17,7 @@ if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
 
   ln -rfs "docker-compose.override.$DOCKER_DEVBOX_ENV.yml" "docker-compose.override.yml"
 {{#if mapserverContainer}}
-  ln -rfs "mapserver/mapserver.$DOCKER_DEVBOX_ENV.yml" "mapserver/mapserver.map"
+  ln -rfs "mapserver/mapserver.$DOCKER_DEVBOX_ENV.map" "mapserver/mapserver.map"
 {{/if}}
 fi
 
@@ -39,12 +39,12 @@ _alias_run() { docker-compose run --rm $@;}
 _alias_php() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
 _alias_composer() { docker-compose run --rm --user www-data --entrypoint composer --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web $@;}
 {{#if drupalInit ~}}
-_alias_drush() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web -r web /var/www/html/vendor/drush/drush/drush $@;}
-_alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web --root web /var/www/html/vendor/drupal/console/bin/drupal $@;}
+_alias_drush() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web /var/www/html/vendor/drush/drush/drush $@;}
+_alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/var/www/html")" web /var/www/html/vendor/drupal/console/bin/drupal $@;}
 {{/if}}
 {{/if_eq}}
 {{#if_eq dbImage "postgres" ~}}
-_alias_psql() { docker-compose exec --user www-data --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -U {{projectName}} $@;}
+_alias_psql() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -h db -U {{projectName}} -d {{projectName}} $@;}
 {{/if_eq}}
 {{#if_eq dbImage "mysql" ~}}
 _alias_mysql() { docker-compose exec --user root db mysql -U root $@;}
@@ -65,7 +65,7 @@ for func in $ALIAS_FUNCTIONS; do
 done
 
 {{#if init ~}}
-if [ -f "./init/init.sh" ] && [ ! -f ./init/.initialized ] && [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
+if [ -f "./init/init.sh" ] && [ -f ./init/.should-initialize ] && [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
   read -p "Project is not initialized. Do you want to initialize it ? [y/N]: " -n 1 -r
   echo
   if [[ $REPLY =~ ^[Yy]$ ]]
