--- a/generators/app/templates/.docker/postgres/Dockerfile.hbs
+++ b/generators/app/templates/.docker/postgres/Dockerfile.hbs
@@ -8,8 +8,12 @@ RUN apt-get update \
 
 # Mount this volume to help loading/exporting dumps
 RUN mkdir /workdir
-WORKDIR /workdir
 VOLUME /workdir
+
+ENV PGPASSFILE=/.pgpass
+COPY .pgpass /.pgpass
+RUN chmod 600 /.pgpass
 
 # Fix permissions to match host user
 RUN usermod -u ${HOST_UID:-1000} postgres && groupmod -g ${HOST_GID:-1000} postgres
+RUN chown postgres /.pgpass
