Add node container

--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -28,6 +28,14 @@ services:
       - "{{portPrefix}}06:3306"
   {{/if_eq ~}}
 {{/if ~}}
+{{#if nodeContainer}}
+  node:
+    environment:
+      VIRTUAL_HOST: node.{{project}}.app
+    networks:
+      - default
+      - nginx-proxy
+{{/if ~}}
 {{#if mapserverContainer}}
   mapserver:
     restart: unless-stopped
