--- a/generators/app/templates/docker-compose.override.rec.yml.hbs
+++ b/generators/app/templates/docker-compose.override.rec.yml.hbs
@@ -30,6 +30,14 @@ services:
       - "{{portPrefix}}06:3306"
   {{/if_eq ~}}
 {{/if ~}}
+{{#if nodeContainer}}
+  node:
+    environment:
+      VIRTUAL_HOST: node.{{project}}.rec.etudes.local
+    networks:
+      - default
+      - nginx-proxy
+{{/if ~}}
 {{#if mapserverContainer}}
   mapserver:
     restart: unless-stopped
