--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -45,10 +45,33 @@ _alias_drupal() { docker-compose run --rm --user www-data --entrypoint php --wor
 {{/if_eq}}
 {{#if_eq dbImage "postgres" ~}}
 _alias_psql() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db psql -h db -U {{projectName}} -d {{projectName}} $@;}
+_alias_pg_dump() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump -h db -U {{projectName}} -d {{projectName}} $@;}
+_alias_pg_restore() { docker-compose run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_restore -h db -U {{projectName}} -d {{projectName}} $@;}
 {{/if_eq}}
 {{#if_eq dbImage "mysql" ~}}
 _alias_mysql() { docker-compose exec --user root db mysql -U root $@;}
 {{/if_eq}}
+{{#if nodeContainer ~}}
+_alias_node() { docker-compose run --rm --workdir="$(_docker_devbox_map_workdir "/app")" node node $@;}
+_alias_npm() {
+  if [ "$1" == "run" ] && [ "$2" == "dev" ]; then
+    PORTS=" -p {{portPrefix}}88:80"
+    echo "Port mapping:$PORTS"
+  else
+    PORTS=""
+  fi
+  docker-compose run --rm$PORTS --workdir="$(_docker_devbox_map_workdir "/app")" node npm $@;
+}
+_alias_yarn() {
+  if [ "$1" == "dev" ] || ([ "$1" == "run" ] && [ "$2" == "dev" ]); then
+    PORTS=" -p {{portPrefix}}88:80"
+    echo "Port mapping:$PORTS"
+  else
+    PORTS=""
+  fi
+  docker-compose run --rm$PORTS --workdir="$(_docker_devbox_map_workdir "/app")" node yarn $@;
+}
+{{/if}}
 {{#if phingContainer ~}}
 _alias_phing() { docker-compose run --rm --user www-data --entrypoint php --workdir="$(_docker_devbox_map_workdir "/app")" builder /composer/vendor/phing/phing/bin/phing  $@;}
 {{/if}}
