--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -79,7 +79,7 @@ _alias_phing() { docker-compose run --rm --user www-data --entrypoint php --work
 _alias_node-sass() { docker-compose run --rm node-sass $@;}
 {{#if drupalInit ~}}
 _alias_build-sass() { docker-compose run --rm --entrypoint node-sass --workdir=/app/web/themes/{{projectName}} node-sass scss -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true --source-map true --follow --output-style expanded $@;}
-_alias_watch-sass() { docker-compose run --rm --entrypoint chokidar --workdir=/app/web/themes/{{projectName}} node-sass \"./**/*.scss\" --initial --verbose -p -c \"node-sass scss -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true --source-map true --follow --output-style expanded" $@;}
+_alias_watch-sass() { docker-compose run --rm --entrypoint chokidar --workdir=/app/web/themes/{{projectName}} node-sass \"./**/*.scss\" --initial --verbose -p -c \"node-sass scss -r -o css --importer /usr/local/lib/node_modules/compass-importer/index.js --sourceComments true --source-map true --follow --output-style expanded\" $@;}
 {{/if}}
 {{/if}}
 {{#if mavenContainer ~}}
