Remove .env file in favor of variable defined in bash_enter

--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -11,6 +11,7 @@
 #######################################################################
 if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
   autostash COMPOSE_PROJECT_DIR=$PWD
+  autostash COMPOSE_PROJECT_NAME={{projectName}}
 
   # Define DOCKER_DEVBOX_ENV to customize environment configuration files
   autostash DOCKER_DEVBOX_ENV="${DOCKER_DEVBOX_ENV:-dev}"
