Add .bash_enter_env template to allow environment specific configuration

--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -9,6 +9,8 @@
 #
 # See http://smartcd.org for more ideas about what can be put here
 #######################################################################
+BASH_ENTER_ENV_FILE=".bash_enter_env" ; [ -f $BASH_ENTER_ENV_FILE ] && . $BASH_ENTER_ENV_FILE
+
 if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
   autostash COMPOSE_PROJECT_DIR=$PWD
   autostash COMPOSE_PROJECT_NAME={{projectName}}
