--- a/generators/app/templates/.docker/node-sass/Dockerfile.hbs
+++ b/generators/app/templates/.docker/node-sass/Dockerfile.hbs
@@ -1,6 +1,9 @@
 FROM node:boron
 MAINTAINER {{authorName}} <{{authorEmail}}>
 
+COPY .ca-certificates/* /usr/local/share/ca-certificates/
+RUN update-ca-certificates
+
 RUN npm install -g node-sass
 RUN npm install -g chokidar-cli
 RUN npm install -g compass-importer
