--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -50,15 +50,9 @@ services:
 {{#if mailcatcherContainer}}
   mailcatcher:
     build:
-      context: .docker/mailcatcher
-      args:
-       http_proxy: ${http_proxy}
-       https_proxy: ${https_proxy}
-       no_proxy: ${no_proxy}
+      context: .docker
+      dockerfile: mailcatcher/Dockerfile
     environment:
-      - http_proxy=${http_proxy}
-      - https_proxy=${https_proxy}
-      - no_proxy=${no_proxy}
       - VIRTUAL_HOST=mailcatcher.{{projectName}}.app
     networks:
       - default
@@ -67,15 +61,8 @@ services:
 {{#if mavenContainer}}
   maven:
     build:
-      context: .docker/maven
-      args:
-       http_proxy: ${http_proxy}
-       https_proxy: ${https_proxy}
-       no_proxy: ${no_proxy}
-    environment:
-      http_proxy: ${http_proxy}
-      https_proxy: ${https_proxy}
-      no_proxy: ${no_proxy}
+      context: .docker
+      dockerfile: maven/Dockerfile
     volumes:
       - ".:/usr/src/app"
       - "maven:/var/www/.m2"
