--- a/generators/app/templates/docker-compose.yml.hbs
+++ b/generators/app/templates/docker-compose.yml.hbs
@@ -4,15 +4,8 @@ services:
   web:
   {{#if_eq webImage 'php'}}
     build:
-      context: .docker/php
-      args:
-        http_proxy: ${http_proxy}
-        https_proxy: ${https_proxy}
-        no_proxy: ${no_proxy}
-    environment:
-      - http_proxy=${http_proxy}
-      - https_proxy=${https_proxy}
-      - no_proxy=${no_proxy}
+      context: .docker
+      dockerfile: php/Dockerfile
     volumes:
       - "${COMPOSE_PROJECT_DIR}:/var/www/html"
       - "composer-cache:/composer/cache"
@@ -22,11 +15,8 @@ services:
   db:
   {{#if_eq dbImage 'postgres'}}
     build:
-      context: .docker/postgres
-      args:
-        http_proxy: ${http_proxy}
-        https_proxy: ${https_proxy}
-        no_proxy: ${no_proxy}
+      context: .docker
+      dockerfile: postgres/Dockerfile
     environment:
       - POSTGRES_USER={{projectName}}
       - POSTGRES_PASSWORD={{projectName}}
@@ -36,11 +26,8 @@ services:
   {{/if_eq ~}}
   {{#if_eq dbImage 'mysql'}}
     build:
-      context: .docker/mysql
-      args:
-        http_proxy: ${http_proxy}
-        https_proxy: ${https_proxy}
-        no_proxy: ${no_proxy}
+      context: .docker
+      dockerfile: mysql/Dockerfile
     environment:
       - MYSQL_ROOT_PASSWORD={{projectName}}
       - MYSQL_DATABASE={{projectName}}
@@ -54,15 +41,8 @@ services:
 {{#if nodeSassContainer}}
   node-sass:
     build:
-      context: .docker/node-sass
-      args:
-        http_proxy: ${http_proxy}
-        https_proxy: ${https_proxy}
-        no_proxy: ${no_proxy}
-    environment:
-      - http_proxy=${http_proxy}
-      - https_proxy=${https_proxy}
-      - no_proxy=${no_proxy}
+      context: .docker
+      dockerfile: node-sass/Dockerfile
     entrypoint: "/bin/true"
     volumes:
       - "${COMPOSE_PROJECT_DIR}:/app"
@@ -72,17 +52,11 @@ services:
 {{#if nodeContainer}}
   node:
     build:
-      context: .docker/node
+      context: .docker
+      dockerfile: node/Dockerfile
       args:
-        http_proxy: "${http_proxy}"
-        https_proxy: "${https_proxy}"
-        no_proxy: "${no_proxy},{{#if webContainer}},web{{/if}},{{#if dbContainer}}db{{/if}},{{#if mapserverContainer}}mapserver{{/if}}"
         GROUP_ID: "${GROUP_ID}"
         USER_ID: "${USER_ID}"
-    environment:
-      http_proxy: "${http_proxy}"
-      https_proxy: "${https_proxy}"
-      no_proxy: "${no_proxy},{{#if webContainer}},web{{/if}},{{#if dbContainer}}db{{/if}},{{#if mapserverContainer}}mapserver{{/if}}"
     volumes:
       - ".:/app"
       - "node-cache:/home/node/.cache"
@@ -90,15 +64,9 @@ services:
 {{#if phingContainer}}
   builder:
     build:
-      context: .docker/phing
-      args:
-        http_proxy: ${http_proxy}
-        https_proxy: ${https_proxy}
-        no_proxy: ${no_proxy}
+      context: .docker
+      dockerfile: phing/Dockerfile
     environment:
-      - http_proxy=${http_proxy}
-      - https_proxy=${https_proxy}
-      - no_proxy=${no_proxy}
       - COMPOSE_PROJECT_DIR=${COMPOSE_PROJECT_DIR}
       - BUILD_WORKING_DIR=/app
     privileged: true
@@ -111,15 +79,8 @@ services:
 {{#if mapserverContainer}}
   mapserver:
     build:
-      context: .docker/mapserver
-      args:
-        http_proxy: "${http_proxy}"
-        https_proxy: "${https_proxy}"
-        no_proxy: ${no_proxy}
-    environment:
-      http_proxy: "${http_proxy}"
-      https_proxy: "${https_proxy}"
-      no_proxy: "${no_proxy}{{#if webContainer}},web{{/if}}{{#if dbContainer}},db{{/if}},mapserver"
+      context: .docker
+      dockerfile: mapserver/Dockerfile
     volumes:
       - "${COMPOSE_PROJECT_DIR}/mapserver:/etc/mapserver"
 {{/if ~}}
