--- a/generators/app/templates/.docker/mailcatcher/Dockerfile.hbs
+++ b/generators/app/templates/.docker/mailcatcher/Dockerfile.hbs
@@ -1,6 +1,11 @@
 FROM alpine:3.6
 MAINTAINER {{authorName}} <{{authorEmail}}>
 
+RUN apk add --update ca-certificates
+
+COPY .ca-certificates/* /usr/local/share/ca-certificates/
+RUN update-ca-certificates
+
 RUN apk add --update \
   ruby \
   ruby-dev \
