Copy only required CA certificates

--- a/generators/app/templates/.bash_enter.hbs
+++ b/generators/app/templates/.bash_enter.hbs
@@ -18,15 +18,13 @@ if [ -z "$BASH_ENTER_ALIAS_ONLY" ]; then
   # Define DOCKER_DEVBOX_ENV to customize environment configuration files
   autostash DOCKER_DEVBOX_ENV="${DOCKER_DEVBOX_ENV:-dev}"
 
-  rm -Rf .docker/.ca-certificates
   echo -n "Copying CA Certificates from host to docker build context ... "
   # Copy host CA certificates to .docker directory for usage in Dockerfile
-  mkdir -p .docker
-  cp -a -L /etc/ssl/certs .docker/.ca-certificates
-  rm -f .docker/.ca-certificates/*.0
-  rm -f .docker/.ca-certificates/*.crt
+  rm -Rf .docker/.ca-certificates
+  mkdir -p .docker/.ca-certificates
+  cp -L /etc/ssl/certs/{GFI*.pem,*.local.pem} .docker/.ca-certificates
   for file in .docker/.ca-certificates/*.pem; do
-      mv "$file" ".docker/.ca-certificates/$(basename "$file" .pem).crt"
+    mv "$file" ".docker/.ca-certificates/$(basename "$file" .pem).crt"
   done
   echo "OK!"
 
