--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -9,7 +9,7 @@ services:
   {{#if_eq webImage 'php'}}
     environment:
       - XDEBUG_CONFIG=idekey=remote-debug remote_host=${HOST_IP}
-      - VIRTUAL_HOST={{projectName}}.app
+      - VIRTUAL_HOST={{projectName}}.test
     networks:
       - default
       - nginx-proxy
@@ -31,7 +31,7 @@ services:
 {{#if nodeContainer}}
   node:
     environment:
-      VIRTUAL_HOST: node.{{project}}.app
+      VIRTUAL_HOST: node.{{project}}.test
     networks:
       - default
       - nginx-proxy
@@ -40,7 +40,7 @@ services:
   mapserver:
     restart: unless-stopped
     environment:
-      - VIRTUAL_HOST=mapserver.{{projectName}}.app
+      - VIRTUAL_HOST=mapserver.{{projectName}}.test
     networks:
       - default
       - nginx-proxy
@@ -53,7 +53,7 @@ services:
       context: .docker
       dockerfile: mailcatcher/Dockerfile
     environment:
-      - VIRTUAL_HOST=mailcatcher.{{projectName}}.app
+      - VIRTUAL_HOST=mailcatcher.{{projectName}}.test
     networks:
       - default
       - nginx-proxy
