--- a/generators/app/templates/docker-compose.override.rec.yml.hbs
+++ b/generators/app/templates/docker-compose.override.rec.yml.hbs
@@ -1,8 +1,7 @@
 version: "2"
 networks:
   nginx-proxy:
-    external:
-      name: nginx-proxy
+    external: true
 services:
 {{#if webContainer}}
   web:
@@ -33,7 +32,7 @@ services:
 {{#if nodeContainer}}
   node:
     environment:
-      VIRTUAL_HOST: node.{{project}}.rec.etudes.local
+      VIRTUAL_HOST: node.{{projectName}}.rec.etudes.local
     networks:
       - default
       - nginx-proxy
