--- a/generators/app/templates/.docker/phing/Dockerfile.hbs
+++ b/generators/app/templates/.docker/phing/Dockerfile.hbs
@@ -20,7 +20,7 @@ RUN curl -o /tmp/composer-setup.php https://getcomposer.org/installer \
 
 # Install Composer
 RUN php /tmp/composer-setup.php --no-ansi --install-dir=/usr/local/bin --filename=composer --snapshot && rm -rf /tmp/composer-setup.php
-RUN apt-get install git zip unzip -y
+RUN apt-get update -y && apt-get install -y git zip unzip && rm -rf /var/lib/apt/lists/*
 
 # Github token
 RUN composer config -g github-oauth.github.com db14c113decece351f1e20cf012ce0b3c8612cd5
@@ -33,8 +33,9 @@ RUN composer global require phing/phing pear/archive_tar --prefer-dist --no-prog
 RUN chmod +x ${COMPOSER_HOME}/vendor/phing/phing/bin/phing && chown ${HOST_UID:-1000}:${HOST_GID:-1000} ${COMPOSER_HOME}/vendor/phing/phing/bin/phing
 
 # Docker CLI
-RUN curl -L -O https://download.docker.com/linux/static/stable/x86_64/docker-18.03.1-ce.tgz \
-  && tar xzvf docker-18.03.1-ce \
+ARG DOCKER_VERSION=18.03.1-ce
+RUN curl -L -O https://download.docker.com/linux/static/stable/x86_64/${DOCKER_VERSION}.tgz \
+  && tar xzvf ${DOCKER_VERSION}.tgz \
   && cp docker/* /usr/bin/ \
   && chmod +x /usr/bin/docker
 
@@ -42,9 +43,12 @@ RUN groupadd -g 998 docker
 RUN usermod -a -G docker www-data
 
 # Docker compose
-RUN curl -L https://github.com/docker/compose/releases/download/1.21.2/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose
+ARG DOCKER_COMPOSE_VERSION=1.21.2
+RUN curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose
 RUN chmod +x /usr/bin/docker-compose
 
 RUN usermod -u ${HOST_UID:-1000} www-data
 RUN groupmod -g ${HOST_GID:-1000} www-data
 RUN chown -R ${HOST_UID:-1000}:${HOST_GID:-1000} $COMPOSER_HOME
+
+ENTRYPOINT "/composer/vendor/phing/phing/bin/phing"
