--- a/generators/app/templates/.docker/php/Dockerfile.hbs
+++ b/generators/app/templates/.docker/php/Dockerfile.hbs
@@ -4,13 +4,8 @@ MAINTAINER {{authorName}} <{{authorEmail}}>
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
 RUN update-ca-certificates
 
-# === Apache + PHP ===
-RUN apt-get update
-
 # GD
-RUN apt-get install -y libpng12-dev \
-        libfreetype6-dev \
-        libjpeg62-turbo-dev \
+RUN apt-get update -y && apt-get install -y libpng12-dev libfreetype6-dev libjpeg62-turbo-dev && rm -rf /var/lib/apt/lists/* \
 && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
 && docker-php-ext-install gd
 
@@ -18,7 +13,7 @@ RUN apt-get install -y libpng12-dev \
 RUN docker-php-ext-install opcache
 
 # LDAP
-RUN apt-get install -y libldap2-dev \
+RUN apt-get update -y && apt-get install -y libldap2-dev && rm -rf /var/lib/apt/lists/* \
 && docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu \
 && docker-php-ext-install ldap
 
@@ -28,7 +23,7 @@ RUN docker-php-ext-install zip
 {{#if dbContainer ~}}
 {{#if_eq dbImage 'postgres' ~}}
 # PDO PostgreSQL
-RUN apt-get install -y libpq-dev \
+RUN apt-get update -y && apt-get install -y libpq-dev && rm -rf /var/lib/apt/lists/* \
 && docker-php-ext-install pdo pdo_pgsql
 {{/if_eq ~}}
 
@@ -82,7 +77,7 @@ RUN curl -o /tmp/composer-setup.php https://getcomposer.org/installer \
 
 # Install Composer
 RUN php /tmp/composer-setup.php --no-ansi --install-dir=/usr/local/bin --filename=composer --snapshot && rm -rf /tmp/composer-setup.php
-RUN apt-get install git zip unzip -y
+RUN apt-get update -y && apt-get install -y git zip unzip && rm -rf /var/lib/apt/lists/*
 
 # Github token
 RUN composer config -g github-oauth.github.com db14c113decece351f1e20cf012ce0b3c8612cd5
@@ -104,7 +99,7 @@ RUN mv drupal.phar /usr/local/bin/drupal && \
 # PSQL Client for drush commands
 RUN curl https://www.postgresql.org/media/keys/ACCC4CF8.asc -L | apt-key add -
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" >> /etc/apt/sources.list.d/postgresql.list
-RUN apt-get update && apt-get install -y postgresql-client-9.6
+RUN apt-get update -y && apt-get install -y postgresql-client-9.6 && rm -rf /var/lib/apt/lists/*
 
 ENV PGPASSFILE=/.pgpass
 COPY php/.pgpass /.pgpass
@@ -113,21 +108,20 @@ RUN chmod 600 /.pgpass
 
 {{#if_eq dbImage 'mysql' ~}}
 # MySQL Client for drush commands
-RUN apt-get update && apt-get install -y mysql-client
+RUN apt-get update -y && apt-get install -y mysql-client && rm -rf /var/lib/apt/lists/*
 {{/if_eq ~}}
 {{/if}}
 
 # wkhtmltopdf
-#RUN apt-get install -y wkhtmltopdf
 RUN curl -LO https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.4/wkhtmltox-0.12.4_linux-generic-amd64.tar.xz
 RUN tar -xf wkhtmltox-0.12.4_linux-generic-amd64.tar.xz
 RUN cp wkhtmltox/bin/* /usr/bin/
 RUN rm -Rf wkhtmltox
-RUN apt-get install -y libxrender1 libfontconfig1
+RUN apt-get update -y && apt-get install -y libxrender1 libfontconfig1 && rm -rf /var/lib/apt/lists/*
 
 {{#if mailcatcherContainer ~}}
 # Configure PHP mail with mailcatcher
-RUN apt-get install -y ssmtp
+RUN apt-get update -y && apt-get install -y ssmtp && rm -rf /var/lib/apt/lists/*
 RUN echo "FromLineOverride=YES" >> /etc/ssmtp/ssmtp.conf && \
   echo "mailhub=mailcatcher" >> /etc/ssmtp/ssmtp.conf && \
   echo 'sendmail_path = "/usr/sbin/ssmtp -t"' > /usr/local/etc/php/conf.d/mail.ini
