Correction volume maven

--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -63,7 +63,7 @@ services:
       context: .docker
       dockerfile: maven/Dockerfile
     volumes:
-      - ".:/usr/src/app"
+      - "${COMPOSE_PROJECT_DIR}:/usr/src/app"
       - "maven:/var/www/.m2"
 {{/if ~}}
 {{#if mavenContainer}}
