--- a/generators/app/templates/.docker/php/Dockerfile.hbs
+++ b/generators/app/templates/.docker/php/Dockerfile.hbs
@@ -96,7 +96,7 @@ RUN mv drupal.phar /usr/local/bin/drupal && \
 {{#if_eq dbImage 'postgres' ~}}
 # PSQL Client for drush commands
 RUN curl https://www.postgresql.org/media/keys/ACCC4CF8.asc -L | apt-key add -
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main" >> /etc/apt/sources.list.d/postgresql.list
+RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main" >> /etc/apt/sources.list.d/postgresql.list
 RUN apt-get update -y && apt-get install -y postgresql-client-9.6 && rm -rf /var/lib/apt/lists/*
 
 ENV PGPASSFILE=/.pgpass
