--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -8,29 +8,29 @@ services:
   {{#if_eq webImage 'php'}}
     environment:
       - XDEBUG_CONFIG=idekey=remote-debug remote_host=${HOST_IP}
-      - VIRTUAL_HOST={{projectName}}.test
+      - VIRTUAL_HOST={{projectName}}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
     ports:
-      - "{{portPrefix}}80:80"
+      - "${DOCKER_DEVBOX_PORT_PREFIX}80:80"
   {{/if_eq ~}}
 {{/if ~}}
 {{#if dbContainer}}
   db:
   {{#if_eq dbImage 'postgres'}}
     ports:
-      - "{{portPrefix}}32:5432"
+      - "${DOCKER_DEVBOX_PORT_PREFIX}32:5432"
   {{/if_eq ~}}
   {{#if_eq dbImage 'mysql'}}
     ports:
-      - "{{portPrefix}}06:3306"
+      - "${DOCKER_DEVBOX_PORT_PREFIX}06:3306"
   {{/if_eq ~}}
 {{/if ~}}
 {{#if nodeContainer}}
   node:
     environment:
-      VIRTUAL_HOST: node.{{projectName}}.test
+      - VIRTUAL_HOST: node.{{projectName}}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
@@ -39,12 +39,12 @@ services:
   mapserver:
     restart: unless-stopped
     environment:
-      - VIRTUAL_HOST=mapserver.{{projectName}}.test
+      - VIRTUAL_HOST=mapserver.{{projectName}}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
     ports:
-      - "{{portPrefix}}85:80"
+      - "${DOCKER_DEVBOX_PORT_PREFIX}85:80"
 {{/if ~}}
 {{#if mailcatcherContainer}}
   mailcatcher:
@@ -52,7 +52,7 @@ services:
       context: .docker
       dockerfile: mailcatcher/Dockerfile
     environment:
-      - VIRTUAL_HOST=mailcatcher.{{projectName}}.test
+      - VIRTUAL_HOST=mailcatcher.{{projectName}}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
