--- a/generators/app/templates/.bash_enter_env.dist.hbs
+++ b/generators/app/templates/.bash_enter_env.dist.hbs
@@ -4,5 +4,6 @@
 autostash DOCKER_DEVBOX_ENV=dev
 autostash DOCKER_DEVBOX_ENV_LIST="rec dev" # Supported environments (symlinks)
 autostash DOCKER_DEVBOX_DOMAIN=test
+autostash DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
 autostash DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
 #autostash COMPOSE_PROJECT_NAME={{projectName}}
