--- a/generators/app/templates/docker-compose.override.dev.yml.hbs
+++ b/generators/app/templates/docker-compose.override.dev.yml.hbs
@@ -8,7 +8,7 @@ services:
   {{#if_eq webImage 'php'}}
     environment:
       - XDEBUG_CONFIG=idekey=remote-debug remote_host=${HOST_IP}
-      - VIRTUAL_HOST={{projectName}}.${DOCKER_DEVBOX_DOMAIN}
+      - VIRTUAL_HOST=${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
@@ -30,7 +30,7 @@ services:
 {{#if nodeContainer}}
   node:
     environment:
-      - VIRTUAL_HOST: node.{{projectName}}.${DOCKER_DEVBOX_DOMAIN}
+      - VIRTUAL_HOST: node.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
@@ -39,7 +39,7 @@ services:
   mapserver:
     restart: unless-stopped
     environment:
-      - VIRTUAL_HOST=mapserver.{{projectName}}.${DOCKER_DEVBOX_DOMAIN}
+      - VIRTUAL_HOST=mapserver.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
@@ -52,7 +52,7 @@ services:
       context: .docker
       dockerfile: mailcatcher/Dockerfile
     environment:
-      - VIRTUAL_HOST=mailcatcher.{{projectName}}.${DOCKER_DEVBOX_DOMAIN}
+      - VIRTUAL_HOST=mailcatcher.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
     networks:
       - default
       - nginx-proxy
